finish swagger and routes
