# routes/thread.js
@@ -7,4 +7,12 @@ router.get('/', threadController.getAll);
 
 router.get('/:id', threadController.getSingle);
 
+router.post('/', threadController.createThread);
+
+router.get('/author/:authorName', threadController.getAuthorThreads);
+
+router.put('/:id', threadController.updateThread);
+
+router.delete('/:id', threadController.deleteThread);
+
 module.exports = router;
